[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_ax_arm"
version = "0.1.0"
description = "Third-party LeRobot robot: 4-DoF Dynamixel AX-series (Protocol 1.0) arm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot[dynamixel]",
]

[tool.setuptools.packages.find]
include = ["lerobot_robot_ax_arm*"]

[tool.setuptools.package-data]
lerobot_robot_ax_arm = ["urdf/*.urdf"]
