<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
　Copyright 2025 Enactic, Inc.

　Licensed under the Apache License, Version 2.0 (the "License");
　you may not use this file except in compliance with the License.
　You may obtain a copy of the License at

　    http://www.apache.org/licenses/LICENSE-2.0

　Unless required by applicable law or agreed to in writing, software
　distributed under the License is distributed on an "AS IS" BASIS,
　WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
　See the License for the specific language governing permissions and
　limitations under the License.
-->
<package format="3">
  <name>openarm_description</name>
  <version>1.0.0</version>
  <description>URDF with optional configuration parameters for OpenArm</description>
  <maintainer email="openarm_dev@enactic.ai">Enactic, Inc.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>ros_gz</depend>
  <depend>realsense2_description</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
